--- a/index.html
+++ b/index.html
@@ -60,10 +60,10 @@
       After the transaction is confirmed (Minimum of 7 confirmations), simply click "Claim deposit" and put the code given with the address to deposit.
       After that, go to My Account -&gt; Buy website trafic and buy the trafic desired (each view costs 0.0049).</p>
 
-<p>Example of how the website works:
- 1º) The advertiser buys 1 view for his website
- 2º) User sees that website during 60 seconds
- 3º)After 60 seconds user does the captcha and gets paid</p>
+<p>Example of how the website works:</p>
+ <p>1º) The advertiser buys 1 view for his website</p>
+ <p>2º) User sees that website during 60 seconds</p>
+ <p>3º)After 60 seconds user does the captcha and gets paid</p>
 
 <p>I am not responsible if you or someone loses Bitcoins, or if you get hacked dued to the lack of security or dued to another thing that happens.
 This is a project in alpha. As an alpha project, you will experience bugs, lack of feactures, and many other things...
