--- a/index.html
+++ b/index.html
@@ -80,14 +80,14 @@ USE IT AT YOUR OWN RISK.</p>
 <li>2 BlockChain Accounts</li>
 </ul>
 
-<p>How to setup the website?
-1&gt; Setup Apache, MySQL, MSMTP, PHP
-2&gt; Create 2 Blockchain wallet accounts
-3&gt; Enable API in both of your Blockchain Wallets
-4&gt; Create a database on MySQL named txzone
-5&gt; Import the database.xml file to the database
-6&gt; Edit db.php in /scripts
-7&gt; Allow your website to acess the API of your wallets</p>
+<p>How to setup the website?</p>
+-&gt; Setup Apache, MySQL, MSMTP, PHP
+-&gt; Create 2 Blockchain wallet accounts
+-&gt; Enable API in both of your Blockchain Wallets
+-&gt; Create a database on MySQL named txzone
+-&gt; Import the database.xml file to the database
+-&gt; Edit db.php in /scripts
+-&gt; Allow your website to acess the API of your wallets</p>
 
 <p>How to reset Tasks Completed By the users (Must be done daily to enable user to make their tasks on the next day):
 1&gt; In phpmyadmin go to txzone -&gt; tasks and delete all databa inside</p>
