--- a/index.html
+++ b/index.html
@@ -81,13 +81,13 @@ USE IT AT YOUR OWN RISK.</p>
 </ul>
 
 <p>How to setup the website?</p>
--&gt; Setup Apache, MySQL, MSMTP, PHP
--&gt; Create 2 Blockchain wallet accounts
--&gt; Enable API in both of your Blockchain Wallets
--&gt; Create a database on MySQL named txzone
--&gt; Import the database.xml file to the database
--&gt; Edit db.php in /scripts
--&gt; Allow your website to acess the API of your wallets</p>
+<p>1) Setup Apache, MySQL, MSMTP, PHP</p>
+<p>2) Create 2 Blockchain wallet accounts</p>
+<p>3) Enable API in both of your Blockchain Wallets</p>
+<p>4) Create a database on MySQL named txzone</p>
+<p>5) Import the database.xml file to the database</p>
+<p>6) Edit db.php in /scripts</p>
+<p>7) Allow your website to acess the API of your wallets</p>
 
 <p>How to reset Tasks Completed By the users (Must be done daily to enable user to make their tasks on the next day):
 1&gt; In phpmyadmin go to txzone -&gt; tasks and delete all databa inside</p>
