--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@ USE IT AT YOUR OWN RISK.</p>
 <li>2 BlockChain Accounts</li>
 </ul>
 
-<p>How to setup the website</p>
+<p>How to setup the website?</p>
 <p>1) Setup Apache, MySQL, MSMTP, PHP</p>
 <p>2) Create 2 Blockchain wallet accounts</p>
 <p>3) Enable API in both of your Blockchain Wallets</p>
